--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="#home">INICIO</a></li>
                 <li><a href="#about-us">SOBRE NOSOTROS</a></li>
-                <li><a href="#contact-us">CONTÁCTENOS</a></li>
+                <li><a href="contact.html">CONTÁCTENOS</a></li>
             </ul>
         </nav>
 
