--- a/index.html
+++ b/index.html
@@ -27,13 +27,111 @@
 
     </header>
 
+    <div class="welcome">
+
+        <h2>TECNIMOTORES ofrece x de soluciones </h2>
+
+        <div class="test" style="height: 500px; background: green;"></div>
+
+    </div>
+
     <div class="section-a">
 
         <div class="overlay">
-            <h3 class="big">Trabajamos por ti lol</h3>
+            <!-- <h3 class="big">Trabajamos por ti lol</h3> -->
+
         </div>
 
-        <img src="./images/pictures/covers/cover.jpg" alt="" class="cover">
+        <!-- <img src="./images/pictures/texture.jpg" alt="" class="cover"> -->
+
+        <!-- <img src="./images/pictures/covers/cover.jpg" alt="" class="cover"> -->
+        <h3>Servicios</h3>
+
+        <!-- <div class="service">
+            <div class="context">
+                <h3>Instalación</h3>
+
+            </div>
+
+            <img src="./images/pictures/rewind.jpg" alt="">
+
+        </div>
+
+        <div class="service">
+
+
+            <img src="./images/pictures/rewind.jpg" alt="">
+
+            <div class="context">
+                <h3>Rebobinado de motores</h3>
+
+            </div>
+
+        </div>
+
+        <div class="service">
+            <div class="context">
+                <h3>Reparación</h3>
+
+            </div>
+
+            <img src="./images/pictures/rewind.jpg" alt="">
+
+        </div> -->
+
+        <div class="service">
+            <div class="context">
+                <h3 class="big">Instalación</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic
+                </p>
+
+            </div>
+
+            <div class="picture">
+                <img src="./images/pictures/rewind.jpg" alt="">
+            </div>
+
+        </div>
+
+        <div class="service">
+
+            <div class="context">
+                <h3 class="big">Rebobinado de motores</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic
+                </p>
+            </div>
+
+            <div class="picture">
+                <img src="./images/pictures/rewind.jpg" alt="">
+
+            </div>
+
+        </div>
+
+        <div class="service">
+            <div class="context">
+                <h3 class="big">Reparación</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic
+                </p>
+
+            </div>
+
+            <div class="picture">
+                <img src="./images/pictures/rewind.jpg" alt="">
+            </div>
+        </div>
 
     </div>
 
@@ -68,7 +166,7 @@
             center
         </div>
         <div class="right">
-            <h2>CONTÁCTENOS</h2>
+            <h2 class="title">CONTÁCTENOS</h2>
 
             <div class="contact-us">
                 <!-- <h3 class="footer-title">TELÉFONOS</h3> -->
