--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
         <div class="corporate-information">
             <!-- <img src="" alt="" class="logo"> -->
-            <h1 class="company-name">TECNIMOTORES</h1>
+            <!-- <h1 class="company-name">TECNIMOTORES</h1> -->
+            <img src="./images/pictures/logo.svg" alt="" class="logo">
         </div>
 
         <nav class="navbar">
@@ -25,13 +26,69 @@
             </ul>
         </nav>
 
+
+        <div class="background">
+
+        </div>
+
     </header>
+
+    <div class="container">
+        <div class="row">
+            <h1>Testimonials</h1>
+            <div id="slider">
+                <div class="button-left slider-button">
+                    <span> < </span> 
+                </div> 
+                <div class="button-right slider-button">
+                    <span> > </span>
+                </div>
+                <div class="slide slide1 showing">
+                    <!-- <div class="slide-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur
+                        ullamcorper convallis. Suspendisse quis
+                        imperdiet nisi, et accumsan enim. Donec tempus mi ex, ac.</div> -->
+                        <img src="./images/pictures/motors/2.jpg" alt="" class="placeholder">
+                    <div class="slide-testimonial">
+                        <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
+                        <div class="slide-person">
+                            <p>Jane Doe</p>
+                            <p>CEO Company x</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide slide2">
+                    <div class="slide-text">aaaaa</div>
+                    <div class="slide-testimonial">
+                        <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
+                        <div class="slide-person">
+                            <p>Jane Doe</p>
+                            <p>CEO Company x</p>
+                        </div>
+                    </div>
+                </div>
+              </div>
+        </div>
+    </div>
 
     <div class="welcome">
 
-        <h2>TECNIMOTORES ofrece x de soluciones </h2>
+        <div class="text">
+            <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2>
+            <p style="text-align: justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <img src="./images/pictures/motors/1.png" alt="" class="transparent">
 
-        <div class="test" style="height: 500px; background: green;"></div>
+        <img src="./images/pictures/pattern.jpg" alt="" class="top">
+
+        <!-- <div class="test" style="height: 500px; background: green;"></div> -->
 
     </div>
 
@@ -163,7 +220,10 @@
             <h1 class="company-name">TECNIMOTORES</h1>
         </div>
         <div class="center">
-            center
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.184084340999!2d-75.55461568590668!3d6.239452328132855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e44285d132a80a1%3A0xcc29bfcbe3035af4!2sCra.%2029%20%2347-86%2C%20Medell%C3%ADn%2C%20Antioquia!5e0!3m2!1sen!2sco!4v1598238176048!5m2!1sen!2sco"
+                width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
         </div>
         <div class="right">
             <h2 class="title">CONTÁCTENOS</h2>
