--- a/index.html
+++ b/index.html
@@ -33,21 +33,19 @@
 
     </header>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <h1>Testimonials</h1>
             <div id="slider">
                 <div class="button-left slider-button">
-                    <span> < </span> 
-                </div> 
+                    <span>
+                        < </span>
+                </div>
                 <div class="button-right slider-button">
                     <span> > </span>
                 </div>
                 <div class="slide slide1 showing">
-                    <!-- <div class="slide-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur
-                        ullamcorper convallis. Suspendisse quis
-                        imperdiet nisi, et accumsan enim. Donec tempus mi ex, ac.</div> -->
-                        <img src="./images/pictures/motors/2.jpg" alt="" class="placeholder">
+                    <img src="./images/pictures/motors/2.jpg" alt="" class="placeholder">
                     <div class="slide-testimonial">
                         <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
                         <div class="slide-person">
@@ -66,27 +64,42 @@
                         </div>
                     </div>
                 </div>
-              </div>
+            </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="welcome">
 
-        <div class="text">
-            <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2>
-            <p style="text-align: justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into
-                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of
-                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-                Aldus PageMaker including versions of Lorem Ipsum.</p>
-        </div>
-        <img src="./images/pictures/motors/1.png" alt="" class="transparent">
+        <div class="banner">
 
-        <img src="./images/pictures/pattern.jpg" alt="" class="top">
+        </div>
+
+        <h2 class="welcome-title big">VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2>
+
+        <div class="welcome-information">
+
+            <div class="text">
+                <!-- <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2> -->
+                <p style="text-align: justify">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.
+                    Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap
+                    into
+                    electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                    release of
+                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
+                    like
+                    Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </div>
+            <img src="./images/pictures/motors/1.png" alt="" class="transparent">
+        </div>
+
+        <!-- <img src="./images/pictures/pattern.jpg" alt="" class="top"> -->
+
+        <!-- <img src="./images/23627.jpg" alt="" class="top"> -->
 
         <!-- <div class="test" style="height: 500px; background: green;"></div> -->
 
@@ -102,7 +115,7 @@
         <!-- <img src="./images/pictures/texture.jpg" alt="" class="cover"> -->
 
         <!-- <img src="./images/pictures/covers/cover.jpg" alt="" class="cover"> -->
-        <h3>Servicios</h3>
+        <h3 class="big" style="color: #FFF">Servicios</h3>
 
         <!-- <div class="service">
             <div class="context">
@@ -214,50 +227,70 @@
 
     </div>
 
-    <footer>
 
-        <div class="left">
-            <h1 class="company-name">TECNIMOTORES</h1>
-        </div>
-        <div class="center">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.184084340999!2d-75.55461568590668!3d6.239452328132855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e44285d132a80a1%3A0xcc29bfcbe3035af4!2sCra.%2029%20%2347-86%2C%20Medell%C3%ADn%2C%20Antioquia!5e0!3m2!1sen!2sco!4v1598238176048!5m2!1sen!2sco"
-                width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe>
-        </div>
-        <div class="right">
-            <h2 class="title">CONTÁCTENOS</h2>
 
-            <div class="contact-us">
-                <!-- <h3 class="footer-title">TELÉFONOS</h3> -->
-                <div class="aside">
-                    <img src="./images/icons/phone.svg" alt="">
-                    <div>
-                        <h3 class="footer-title">TELÉFONOS</h3>
-                        <p>2625600</p>
-                        <p>1235678</p>
-                    </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="item footer-item">
+                <div class="icon">
+                    <img src="./images/icons/location-pin.svg" alt="" style="margin-right: 8px;">
                 </div>
-
-                <div class="aside">
-                    <img src="./images/icons/mail.svg" alt="">
-                    <div>
-                        <h3 class="footer-title">CORREO ELECTRÓNICO</h3>
-                        <p>tecnimotores@tecnimotores.com</p>
-                    </div>
-                </div>
-
-                <div class="aside">
-                    <img src="./images/icons/location-pin.svg" alt="">
-                    <div>
-                        <h3>UBICACIÓN</h3>
-                        <p>Carrera 29 # 47 - 86</p>
-                        <p>Barrio El Centro</p>
-                        <p>Medellín, Colombia</p>
-                    </div>
+                <div class="text">
+                    <h4>Visítenos</h4>
+                    <span>Cra 29 # 47 - 86</span>
                 </div>
             </div>
 
+            <div class="item footer-item">
+                <div class="icon">
+                    <img src="./images/icons/phone.svg" alt="" style="margin-right: 8px;">
+                </div>
+                <div class="text">
+                    <h4>Llámenos</h4>
+                    <!-- <span>2626763</span> -->
+                    <p>2626763 - 2626763</p>
+                </div>
+            </div>
+
+            <div class="item footer-item">
+                <div class="icon">
+                    <img src="./images/icons/envelope-line.svg" alt="" style="margin-right: 13px">
+                </div>
+                <div class="text">
+                    <h4>Escríbanos</h4>
+                    <span>tecnimotores@tecnimotores.com</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-separator"></div>
+
+        <div class="footer-container">
+            <div class="item">
+                <img src="./images/icons/logo.svg" alt="" class="logo">
+
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </div>
+            </div>
         </div>
     </footer>
 
