--- a/index.html
+++ b/index.html
@@ -225,6 +225,48 @@
 
     <div class="section-c">
 
+        <div class="container">
+            <div class="row">
+                <!-- <h1>Testimonials</h1> -->
+                <div id="slider">
+                    <div class="button-left slider-button">
+                        <span>
+                            < </span>
+                    </div>
+                    <div class="button-right slider-button">
+                        <span> > </span>
+                    </div>
+                    <div class="slide slide1 showing">
+                        <img src="./images/pictures/motors/2.jpg" alt="" class="placeholder">
+                        <div class="slide-testimonial">
+                            <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
+                            <div class="slide-person">
+                                <p>Jane Doe</p>
+                                <p>CEO Company x</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <!-- <div class="slide-text">aaaaa</div>
+                        <div class="slide-testimonial">
+                            <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
+                            <div class="slide-person">
+                                <p>Jane Doe</p>
+                                <p>CEO Company x</p>
+                            </div>
+                        </div> -->
+                        <div class="card">
+                            <img src="./images/pictures/motors/2.jpg" alt="Denim Jeans" style="width:100%">
+                            <h1>Tailored Jeans</h1>
+                            <p class="price">$19.99</p>
+                            <p>Some text about the jeans..</p>
+                            <p><button>Add to Cart</button></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
