--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 <body>
 
-    <header>
+    <!-- <header>
 
         <div class="corporate-information">
-            <!-- <img src="" alt="" class="logo"> -->
-            <!-- <h1 class="company-name">TECNIMOTORES</h1> -->
+
             <img src="./images/pictures/logo.svg" alt="" class="logo">
         </div>
 
@@ -31,6 +30,22 @@
 
         </div>
 
+    </header> -->
+
+    <header class="topnav" id="myTopnav">
+        <a href="#home"><img class="logo" src="./images/pictures/logo.svg"></a>
+        <div class="navlist" id="navlist">
+            <a class="cursor0" href="#home">&nbsp</a>
+            <a class="navoption active" href="#home">Home</a>
+            <a class="navoption" href="#news">News</a>
+            <a class="navoption" href="#contact">Contact</a>
+            <a class="navoption" href="#about">Blog</a>
+            <a class="navoption" href="#about">About</a>
+            <a href="javascript:void(0);" class="icon" id="hamburger">
+                <!-- <i class="fa fa-bars"></i> -->
+                <img src="./images/icons/hamburger.svg" alt="">
+            </a>
+        </div>
     </header>
 
     <!-- <div class="container">
@@ -336,7 +351,9 @@
         </div>
     </footer>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="main.js"></script>
+    
 </body>
 
 </html>
