--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <!-- <header>
+    <header>
 
         <div class="corporate-information">
 
@@ -26,13 +26,9 @@
         </nav>
 
 
-        <div class="background">
+    </header>
 
-        </div>
-
-    </header> -->
-
-    <header class="topnav" id="myTopnav">
+    <!-- <header class="topnav" id="myTopnav">
         <a href="#home"><img class="logo" src="./images/pictures/logo.svg"></a>
         <div class="navlist" id="navlist">
             <a class="cursor0" href="#home">&nbsp</a>
@@ -42,11 +38,10 @@
             <a class="navoption" href="#about">Blog</a>
             <a class="navoption" href="#about">About</a>
             <a href="javascript:void(0);" class="icon" id="hamburger">
-                <!-- <i class="fa fa-bars"></i> -->
                 <img src="./images/icons/hamburger.svg" alt="">
             </a>
         </div>
-    </header>
+    </header> -->
 
     <!-- <div class="container">
         <div class="row">
@@ -95,7 +90,7 @@
 
             <div class="text">
                 <!-- <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2> -->
-                <p style="text-align: justify">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <p class="test">Lorem Ipsum is simply dummy text of the printing and typesetting
                     industry.
                     Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
@@ -108,8 +103,15 @@
                     Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
                     like
                     Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+                    <div class="decor">
+
+                    </div>
             </div>
-            <img src="./images/pictures/motors/1.png" alt="" class="transparent">
+            <!-- <img src="./images/pictures/motors/1.png" alt="" class="transparent"> -->
+            <img src="./images/pictures/328.png" alt="" class="transparent">
+
+            <img src="./images/pictures/unnamed.jpg" alt="" class="top">
         </div>
 
         <!-- <img src="./images/pictures/pattern.jpg" alt="" class="top"> -->
@@ -130,8 +132,7 @@
         <!-- <img src="./images/pictures/texture.jpg" alt="" class="cover"> -->
 
         <!-- <img src="./images/pictures/covers/cover.jpg" alt="" class="cover"> -->
-        <h3 class="big" style="color: #FFF">Servicios</h3>
-
+        <h3 class="big" style="padding: 20px; color: #151414; background: #FFF">Servicios</h3>
         <!-- <div class="service">
             <div class="context">
                 <h3>Instalación</h3>
@@ -177,7 +178,7 @@
             </div>
 
             <div class="picture">
-                <img src="./images/pictures/rewind.jpg" alt="">
+                <img src="./images/pictures/rewind.jpg" alt="" class="service__picture">
             </div>
 
         </div>
@@ -195,7 +196,7 @@
             </div>
 
             <div class="picture">
-                <img src="./images/pictures/rewind.jpg" alt="">
+                <img src="./images/pictures/rewind.jpg" alt="" class="service__picture">
 
             </div>
 
@@ -214,7 +215,7 @@
             </div>
 
             <div class="picture">
-                <img src="./images/pictures/rewind.jpg" alt="">
+                <img src="./images/pictures/rewind.jpg" alt="" class="service__picture">
             </div>
         </div>
 
@@ -252,30 +253,21 @@
                         <span> > </span>
                     </div>
                     <div class="slide slide1 showing">
-                        <img src="./images/pictures/motors/2.jpg" alt="" class="placeholder">
-                        <div class="slide-testimonial">
-                            <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
-                            <div class="slide-person">
-                                <p>Jane Doe</p>
-                                <p>CEO Company x</p>
-                            </div>
+                        <div class="card">
+                            <img src="./images/pictures/motors/2.jpg" alt="Denim Jeans" style="width:100%">
+                            <h1>Motoreductores</h1>
+                            <p class="price">$19.99</p>
+                            <p>Especificaciones</p>
+                            <!-- <p><button>Add to Cart</button></p> -->
                         </div>
                     </div>
                     <div class="slide slide2">
-                        <!-- <div class="slide-text">aaaaa</div>
-                        <div class="slide-testimonial">
-                            <div class="slide-img"><img alt="testimonial" src="./images/testimonial1.jpg"></div>
-                            <div class="slide-person">
-                                <p>Jane Doe</p>
-                                <p>CEO Company x</p>
-                            </div>
-                        </div> -->
                         <div class="card">
                             <img src="./images/pictures/motors/2.jpg" alt="Denim Jeans" style="width:100%">
-                            <h1>Tailored Jeans</h1>
+                            <h1>Bombas eléctrica</h1>
                             <p class="price">$19.99</p>
-                            <p>Some text about the jeans..</p>
-                            <p><button>Add to Cart</button></p>
+                            <p>Especificaciones</p>
+                            <!-- <p><button>Add to Cart</button></p> -->
                         </div>
                     </div>
                 </div>
@@ -351,9 +343,7 @@
         </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="main.js"></script>
-    
 </body>
 
 </html>
