--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
 
+    <div class="pre-header">
+
+        <span>Teléfonos: (+00) 2691317 - (+00) 2736192, (+57) 302 208 3365</span>
+
+    </div>
+
     <header>
 
         <div class="corporate-information">
@@ -84,6 +90,10 @@
 
         </div>
 
+        <button class="quote-with-us">
+            COTICE CON NOSOTROS
+        </button>
+
         <h2 class="welcome-title big">VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2>
 
         <div class="welcome-information">
@@ -104,9 +114,9 @@
                     like
                     Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-                    <div class="decor">
+                <div class="decor">
 
-                    </div>
+                </div>
             </div>
             <!-- <img src="./images/pictures/motors/1.png" alt="" class="transparent"> -->
             <img src="./images/pictures/328.png" alt="" class="transparent">
@@ -119,6 +129,40 @@
         <!-- <img src="./images/23627.jpg" alt="" class="top"> -->
 
         <!-- <div class="test" style="height: 500px; background: green;"></div> -->
+
+    </div>
+
+    <div class="pre-section">
+
+        <div class="product">
+            <img src="./images/pictures/products/motor_reducer.jpg" alt="" class="pre-section__picture">
+
+            <div class="product--dim"></div>
+            <div class="product--decor">
+                <h3>BOMBAS</h3>
+            </div>
+        </div>
+        <div class="product">
+            <img src="./images/pictures/products/pump.jpg" alt="" class="pre-section__picture">
+            <div class="product--dim"></div>
+            <div class="product--decor">
+                <h3>MOTORREDUCTORES</h3>
+            </div>
+        </div>
+        <div class="product">
+            <img src="./images/pictures/products/y.png" alt="" class="pre-section__picture">
+            <div class="product--dim"></div>
+            <div class="product--decor">
+                <h3>MOTORES TRIFÁSICOS</h3>
+            </div>
+        </div>
+        <div class="product">
+            <img src="./images/pictures/products/z.jpg" alt="" class="pre-section__picture">
+            <div class="product--dim"></div>
+            <div class="product--decor">
+                <h3>MOTORES ABCDE</h3>
+            </div>
+        </div>
 
     </div>
 
