--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="welcome">
 
-        <div class="banner">
+        <!-- <div class="banner">
 
         </div>
 
@@ -96,11 +96,11 @@
 
         <h2 class="welcome-title big">VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2>
 
-        <div class="welcome-information">
+        <div class="welcome-information"> -->
 
-            <div class="text">
+            <!-- <div class="text"> -->
                 <!-- <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2> -->
-                <p class="test">Lorem Ipsum is simply dummy text of the printing and typesetting
+                <!-- <p class="test">Lorem Ipsum is simply dummy text of the printing and typesetting
                     industry.
                     Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
@@ -116,19 +116,23 @@
 
                 <div class="decor">
 
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
             <!-- <img src="./images/pictures/motors/1.png" alt="" class="transparent"> -->
-            <img src="./images/pictures/328.png" alt="" class="transparent">
+            <!-- <img src="./images/pictures/328.png" alt="" class="transparent"> -->
 
-            <img src="./images/pictures/unnamed.jpg" alt="" class="top">
-        </div>
+            <!-- <img src="./images/pictures/unnamed.jpg" alt="" class="top"> -->
+        <!-- </div> -->
 
         <!-- <img src="./images/pictures/pattern.jpg" alt="" class="top"> -->
 
         <!-- <img src="./images/23627.jpg" alt="" class="top"> -->
 
         <!-- <div class="test" style="height: 500px; background: green;"></div> -->
+
+        <!-- <img src="" alt="" class="welcome__picture"> -->
+
+        <img src="./header (3).png" alt="" class="welcome__picture">
 
     </div>
 
@@ -225,6 +229,9 @@
                 <img src="./images/pictures/rewind.jpg" alt="" class="service__picture">
             </div>
 
+
+            <img src="./shop.jpg" alt="" class="service__cover">
+
         </div>
 
         <div class="service">
@@ -244,6 +251,8 @@
 
             </div>
 
+            <img src="./rewinding.jpg" alt="" class="service__cover">
+
         </div>
 
         <div class="service">
@@ -261,6 +270,9 @@
             <div class="picture">
                 <img src="./images/pictures/rewind.jpg" alt="" class="service__picture">
             </div>
+
+
+            <img src="./ba.jpg" alt="" class="service__cover">
         </div>
 
     </div>
