--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 
         <div class="welcome-information"> -->
 
-            <!-- <div class="text"> -->
-                <!-- <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2> -->
-                <!-- <p class="test">Lorem Ipsum is simply dummy text of the printing and typesetting
+        <!-- <div class="text"> -->
+        <!-- <h2>VENTA Y REPARACIÓN DE MOTORES ELÉCTRICOS</h2> -->
+        <!-- <p class="test">Lorem Ipsum is simply dummy text of the printing and typesetting
                     industry.
                     Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
@@ -117,11 +117,11 @@
                 <div class="decor">
 
                 </div> -->
-            <!-- </div> -->
-            <!-- <img src="./images/pictures/motors/1.png" alt="" class="transparent"> -->
-            <!-- <img src="./images/pictures/328.png" alt="" class="transparent"> -->
+        <!-- </div> -->
+        <!-- <img src="./images/pictures/motors/1.png" alt="" class="transparent"> -->
+        <!-- <img src="./images/pictures/328.png" alt="" class="transparent"> -->
 
-            <!-- <img src="./images/pictures/unnamed.jpg" alt="" class="top"> -->
+        <!-- <img src="./images/pictures/unnamed.jpg" alt="" class="top"> -->
         <!-- </div> -->
 
         <!-- <img src="./images/pictures/pattern.jpg" alt="" class="top"> -->
@@ -226,11 +226,12 @@
             </div>
 
             <div class="picture">
-                <img src="./images/pictures/rewind.jpg" alt="" class="service__picture">
+                <!-- <img src="./images/pictures/rewind.jpg" alt="" class="service__picture"> -->
             </div>
 
 
-            <img src="./shop.jpg" alt="" class="service__cover">
+            <!-- <img src="./shop.jpg" alt="" class="service__cover"> -->
+            <img src="./r.png" alt="" class="service__test">
 
         </div>
 
@@ -330,6 +331,22 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="brands">
+        <h1>MARCAS</h1>
+        <div class="brands__row">
+            <img src="./images/brands/siemens.svg" alt="" class="brands__logo">
+            <img src="./images/brands/general_electric.svg" alt="" class="brands__logo">
+            <img src="./images/brands/weg.svg" alt="" class="brands__logo">
+            <img src="./images/brands/nidec.svg" alt="" class="brands__logo">
+        </div>
+
+        <div class="brands__row">
+            <img src="./images/brands/hitachi.svg" alt="">
+            <img src="./images/brands/toshiba.svg" alt="">
+            <img src="./images/brands/lincoln_electric.svg" alt="">
+        </div>
     </div>
 
 
