--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     </div>
 
     <header>
-
+        
         <div class="corporate-information">
 
-            <img src="./images/pictures/logo.svg" alt="" class="logo">
+            <a href="./index.html"><img src="./images/pictures/logo.svg" alt="" class="logo"></a>
+            
         </div>
 
         <nav class="navbar">
