--- a/index.html
+++ b/index.html
@@ -337,16 +337,16 @@
     <div class="brands">
         <h1>MARCAS</h1>
         <div class="brands__row">
-            <img src="./images/brands/siemens.svg" alt="" class="brands__logo">
-            <img src="./images/brands/general_electric.svg" alt="" class="brands__logo">
-            <img src="./images/brands/weg.svg" alt="" class="brands__logo">
-            <img src="./images/brands/nidec.svg" alt="" class="brands__logo">
+            <img src="./images/brands/resized/siemens 1.svg" alt="" class="brands__logo">
+            <img src="./images/brands/resized/general_electric 1.svg" alt="" class="brands__logo">
+            <img src="./images/brands/resized/weg 1.svg" alt="" class="brands__logo">
+            <img src="./images/brands/resized/layer1.svg" alt="" class="brands__logo">
         </div>
 
         <div class="brands__row">
-            <img src="./images/brands/hitachi.svg" alt="">
-            <img src="./images/brands/toshiba.svg" alt="">
-            <img src="./images/brands/lincoln_electric.svg" alt="">
+            <img src="./images/brands/resized/hitachi 2.svg" alt="">
+            <img src="./images/brands/resized/toshiba 1.svg" alt="">
+            <img src="./images/brands/resized/lincoln_electric 1.svg" alt="">
         </div>
     </div>
 
